[project]
name = "jupyterlite-demo"
version = "0.0.1"
requires-python = ">= 3.12"
dependencies = [
    "jupyterlite-core==0.6.4",
    "jupyterlab~=4.4.5",
    "notebook~=7.4.5",
    "jupyterlite-pyodide-kernel==0.6.1",
    "jupyterlite-javascript-kernel==0.3.0",
    "jupyterlab-language-pack-fr-fr",
    "jupyterlab-language-pack-zh-cn",
    "jupyterlite-p5-kernel==0.1.1",
    "jupyterlab-fasta>=3.3.0,<4",
    "jupyterlab-geojson>=3.4.0,<4",
    "jupyterlab-night",
    "jupyterlab-miami-nights",
    "ipywidgets>=8.1.3,<9",
    "ipyevents>=2.0.1",
    "ipympl>=0.8.2",
    "ipycanvas>=0.9.1",
    "ipyleaflet",
    "plotly>=6,<7",
    "bqplot",
]

[tool.uv]
package = false
